@@ -1,79 +1,34 @@
 # PanamaGL
 
-PanamaGL is a Java library allowing real time 2D & 3D Graphics on `Linux`, `macOs` and `Windows` as of Java `22`.
+PanamaGL is a Java library allowing real time 2D & 3D Graphics everywhere!
 
-PanamaGL can run on `AWT`, `JavaFX`, `Swing` and `SWT`.
-
-The library is based on multi-platform bindings to the `OpenGL` native library and other per-os companion libraries (`CGL` for macOS, `GLX` for Linux and `WGL` for Windows). Most of the code is generated with JExtract
-
-
-
-
-
-## Compatibility
-
+Supported :
 - Windowing toolkits : `AWT`, `JavaFX`, `Swing` and `SWT`.
-- JDK Versions : `22`
 - OS : `linux`, `macOS`, `Windows`
+- JDK Versions : `22`
+
+The library is based on multi-platform bindings to the `OpenGL` native library and other per-os companion libraries (`CGL` for macOS, `GLX` for Linux and `WGL` for Windows). Most of the code is generated with JExtract.
+
+
+
+
+## Why ?
+
+PanamaGL is similar to JOGL and LWJGL and born many years latter.
+
+PanamaGL is great because it is only made of Java code hence easy to improve and rebuild for any Java developer.
+
+Historical OpenGL bindings like JOGL and LWJGL require generating C code to create native bindings. This makes rebuilding the framework for a large number of target platform difficult since one requires hardware nodes in the CI having all the OS,CPU,GPU (and JDK versions) of the target audience.
+
+PanamaGL bindings use The Foreign Function Memory API introduced in JDK 22, allowing to bind to native library through Java code only. JExtract allows generating the java libraries enabling to invoke OpenGL each OS it was generated on.
+
+With the help of `JExtractGL` we bundle all per target binding under a single `GL` entry point interface.
 
 ## How to use
 
-### Dependencies
+### Skeleton of a PanamaGL applications
 
-One of the following Maven dependencies should be added to your project according to the UI framework of your application :
-
-#### Supported toolkits
-
-##### AWT dependency
-
-
-```xml
-<dependency>
-  <groupId>org.jzy3d</groupId>
-  <artifactId>panama-gl-ui-awt</artifactId>
-  <version>1.2.0</version>
-</dependency>
-```
-##### JavaFX dependency
-
-```xml
-<dependency>
-  <groupId>org.jzy3d</groupId>
-  <artifactId>panama-gl-ui-javafx</artifactId>
-  <version>1.2.0</version>
-</dependency>
-```
-
-##### Swing dependency
-```xml
-<dependency>
-  <groupId>org.jzy3d</groupId>
-  <artifactId>panama-gl-ui-swing</artifactId>
-  <version>1.2.0</version>
-</dependency>
-```
-
-#### Repository
-
-The following repositories should be added to the list of candidate Maven repositories :
-```xml
-<repositories>
-  <repository>
-    <id>jzy3d-snapshots</id>
-    <name>Jzy3d Snapshots</name>
-    <url>https://maven.jzy3d.org/snapshots/</url>
-  </repository>
-  <repository>
-    <id>jzy3d-releases</id>
-    <name>Jzy3d Releases</name>
-    <url>https://maven.jzy3d.org/releases/</url>
-  </repository>
-</repositories>
-```
-
-### Building a 3D rendering Java application
-
-#### Listener
+#### GLEventListener
 
 A rendering application must define when and what should be rendered through a class implementing the four `init()`, `display()`, `reshape()` and `destroy()` hooks of a `GLEventListener`.
 
@@ -102,7 +57,7 @@ The listener will be invoked by the `AWT thread`.
 
 :warning: OpenGL being single threaded, a `GLEventListener` should never try delegating tasks to other threads otherwise OpenGL errors will occur.
 
-#### Canvas
+#### GLCanvas
 
 
 The application must then instantiate a `GLCanvas` according to the UI framework it is based on. It requires a factory that (described later) and must register the `GLEventListener` that will be executed upon init, render or resize of the canvas.
@@ -118,7 +73,7 @@ Available canvases :
 * `GLCanvasSwing`
 
 
-#### Factory
+#### PanamaGLFactory
 
 All per-platform components required to perform drawing are provided by a factory. The `PanamaGLFactory` that is considered compliant with the computer running the program will be elected after the bellow call :
 
@@ -133,23 +88,24 @@ Which returns one of
 
 Once the canvas gets added to a component hierarchy, a couple of classes will be initialized by the `PanamaGLFactory`.
 
-* The `OffscreenRenderer` will schedule rendering in the appropriate thread and generate images to be displayed by the canvas. It uses an OS-dependent implementation of `FBO` to initialize and use the GPU buffers. All these objects are used PanamaGL `GLCanvas` internally.
-* The `GLContext` will provide description of the GPU capabilities (supported OpenGL version, etc). The context is returned by the `GLCanvas` once it has initialized.
-* The `GL` instance will allow invoking drawing instructions. It is provided as an input argument of the `GLEventListener` that you implement.
+* The `GLContext` will provide description of the GPU capabilities (supported OpenGL version, etc). The context is made available through the `GLCanvas` once it has initialized offscreen rendering.
+* The `OffscreenRenderer` will schedule rendering in the appropriate thread and generate images to be displayed by the `GLCanvas`. It uses an OS-dependent implementation of a `FBO` (a.k.a "Frame Buffer Object") to initialize and use the GPU buffers. All these objects are initialized and used in PanamaGL's `GLCanvas` internally.
+* The `GL` instance will allow invoking drawing instructions. It is provided as an input argument of the `GLEventListener` that you implement. One perform drawing instructions with `gl.glDoSomething(args)`
 
 
 <img src="doc/panama-gl-main-classes.png">
 
 
-
-
-### Wrapping up through an example
+### Going to through an example
 
 This is one of the examples available in the `panama-gl-samples` maven module in this project.
 
 #### A simple Java Window to render OpenGL
 
 This example application uses the `TeapotGLEventListener` defined later to draw a teapot in a Java Swing Frame.
+
+:warning: Do not forget to run the program with VM arguments providing the path to the OpenGL binaries as shown in the sample javadoc, e.g. on macOS : ```java PanamaGL_Demo --enable-native-access=ALL-UNNAMED -Djava.library.path=.:/System/Library/Frameworks/OpenGL.framework/Versions/Current/Libraries/```
+
 
 ```java
 package demos.panamagl.swing;
@@ -184,11 +140,11 @@ public class PanamaGL_Demo {
     // Detect the current platform and required classes
     PanamaGLFactory factory = PanamaGLFactory.select();
 
-    // Create a panel to render into
-    GLCanvasSwing panel = new GLCanvasSwing(factory);
+    // Create a canvas to render into
+    GLCanvasSwing canvas = new GLCanvasSwing(factory);
 
     // Link the panel to the scene we want to render
-    panel.setGLEventListener(listener);
+    canvas.setGLEventListener(listener);
 
     // Create frame to add the panel
     final JFrame frame = new JFrame(DemoTeapot_Onscreen_Swing.class.getSimpleName());
@@ -200,19 +156,17 @@ public class PanamaGL_Demo {
     Runnable show = new Runnable() {
       @Override
       public void run() {
-        frame.add(panel, BorderLayout.CENTER);
+        frame.add(canvas, BorderLayout.CENTER);
         frame.setVisible(true);
         frame.setBounds(0, 0, 800, 700);
       }
     };
 
-
     // Use this to avoid Swing hangs
     SwingUtilities.invokeLater(show);
-    //show.run();
 
-    // Start animating
-    Animator a = new Animator(panel);
+    // Start animating the OpenGL scene
+    Animator a = new Animator(canvas);
     a.start();
   }
 }
@@ -235,6 +189,7 @@ public static GLEventAdapter PanamaGLDemoListener() {
   return new GLEventAdapter() {
 
     /** When GL Canvas init. */
+    @Override
     public void init(GL gl) {
 
       Arena arena = Arena.ofConfined();
@@ -264,6 +219,7 @@ public static GLEventAdapter PanamaGLDemoListener() {
     }
 
     /** When GL Canvas displays. */
+    @Override
     public void display(GL gl) {
 
       // Reset Background
@@ -303,35 +259,170 @@ public static GLEventAdapter PanamaGLDemoListener() {
 }
 ```
 
+### Dependencies
 
+One of the following Maven dependencies should be added to your project according to the UI framework of your application :
+
+#### Supported toolkits
+
+##### AWT dependency
+
+
+```xml
+<dependency>
+  <groupId>org.jzy3d</groupId>
+  <artifactId>panama-gl-ui-awt</artifactId>
+  <version>1.2.0</version>
+</dependency>
+```
+##### JavaFX dependency
+
+```xml
+<dependency>
+  <groupId>org.jzy3d</groupId>
+  <artifactId>panama-gl-ui-javafx</artifactId>
+  <version>1.2.0</version>
+</dependency>
+```
+
+##### Swing dependency
+```xml
+<dependency>
+  <groupId>org.jzy3d</groupId>
+  <artifactId>panama-gl-ui-swing</artifactId>
+  <version>1.2.0</version>
+</dependency>
+```
+
+#### Repository
+
+:warning: PanamaGL is not yet available on Maven Central. You must add the following repositories to the list of the Maven repositories of your project `pom` file :
+
+```xml
+<repositories>
+  <repository>
+    <id>jzy3d-snapshots</id>
+    <name>Jzy3d Snapshots</name>
+    <url>https://maven.jzy3d.org/snapshots/</url>
+  </repository>
+  <repository>
+    <id>jzy3d-releases</id>
+    <name>Jzy3d Releases</name>
+    <url>https://maven.jzy3d.org/releases/</url>
+  </repository>
+</repositories>
+```
+
+### Demos
+
+You can find demos in these projects
+* [panama-gl-samples](panama-gl-samples) PanamaGL Swing & AWT Samples
+* [panama-gl-jzy3d](panama-gl-jzy3d) Benchmarks
+  * Jzy3D Native samples (direct draw to an OS window)
+  * Jzy3D Embedded samples (indirect draw to a Java window)
+* [panama-gl-wrappers-macos](panama-gl-wrappers-macos) Unit tests in src/test/java
+
+
+#### 3D offscreen GL demo
+
+* `TestFBO_macOS` and `DemoFBO_Offscreen_macOS`
+
+More details in [demo index](doc/PanamaGL-Demos.md)
+
+#### 3D onscreen GL demos
+
+These two demo open a *native* window with Jzy3D (hence not a Java window yet). One can use the mouse to rotate the object, and double click to start an automatic rotation.
+
+| `SurfaceDemoPanamaGL`| `TeapotDemoPanamaGL`|
+|-|-|
+| <img src="doc/panama-gl-surface.png"/> | <img src="./doc/panama-gl-teapot.png"/> |
+
+More details in [demo index](doc/PanamaGL-Demos.md)
 
 ## How to develop
 
+:warning: This section is useful for people willing to enhance and customize PanamaGL.
 
-### Structure
+PanamaGL is made of two repositories
+* `panama-gl` : the current repository delivering the API.
+* `panama-gl-bindings` : the raw binding code to OpenGL generated by JExtract .
 
-<img src="doc/panama-gl-structure.png">
+### GL API and implementations
 
-### Inheritance
+`panama-gl` has its API generated by `JExtractGL`. It is based on a couple of Java interface that extend themselves to show the effect of OpenGL version extensions.
+
+`GL` and `GLContext` have implementation for each target OS that will in turn invoke the java code that was generated for this target. The generated Java code is the one provided by `panama-gl-bindings`.
 
 <img src="doc/panama-gl-inheritance.png">
 
-- Build
+### Platform independance
 
-- Tests per platform
+Platform independance is enabled by generalizing the above implementation scheme for each required target :
 
-- Generate bindings
+<img src="doc/panama-gl-structure.png">
 
-- Generate wrappers
+#### OpenGL Wrappers, Bindings, Natives
+
+Let's clarify 3 words
+* _Natives_ : native OpenGL libraries (`opengl.dll`, `libGL.dylib`, `libGL.so` with related `GL.h`). Up to now assumed to be available on the developer or user computer.
+* _Bindings_ : raw Java classes generated by `JExtract` to invoke _Native_ libraries. Precompiled, available on Maven, Stored [here](https://gitlab.com/jzy3d/panama-gl-bindings).
+* _Wrappers_ : thin Java abstraction to fit a common GL interface defined by `panama-gl-core/GL`, wrapping _Bindings_.
+
+This project only provides _Wrappers_ and depends on _Bindings_. This avoid the main projects to recompile large _Bindings_ file source folder and makes IDEs faster.
+
+#### Existing Wrappers & Bindings
+
+| Binding | Platform | GPU | Branch |
+| ------- | -------- | --- | ------ |
+| Linux | Ubuntu 20 | Intel | in progress / Blocked by FBO on Ubuntu |
+| Apple | macOS 10.15.7 | Intel | OK |
+| Apple | macOS 11.4.0 M1 | M1 | in progress / Blocked by no Panama JDK on ARM yet (Oracle) |
+| Microsoft | Windows 10 | Intel | in progress / Blocked by JDK19 |
 
 
----------------------
 
-PanamaGL aims at providing multiplatorm bindings to OpenGL using the Foreign Function & Memory API for JDK22 and later.
 
-We here show how to use PanamaGL to run OpenGL based rendering application both as a standalone library AND embedded in the Java 3D Charts framework [Jzy3D](https://github.com/jzy3d/jzy3d-api), which already uses JOGL for GPU rendering and EmulGL for CPU rendering.
+
+### Build, test, deploy
+
+Any computer able to build Java code with Maven can rebuild the complete API :
+
+```
+mvn install
+```
+
+All tests execute on each platform. The computer building the test only runs test for its platform. Properly validating an API improvement hence requires running the tests, especially integration tests such as `DurabilityTest` manually.
+
+To build without running the tests :
+
+```
+mvn install -DskipTests
+```
+
+To deploy
+
+```
+mvn deploy
+```
+
+
+### Generate new code
+
+#### Generate new bindings
+
+To generate new bindings for your platform, see [the setup documentation of the bindings project](https://gitlab.com/jzy3d/panama-gl-bindings/-/tree/main/doc/setup)
+
+* You _should_ only have to do this if you use a computer OS and version for which bindings do NOT exist already.
+* You _may not_ have to regenerate bindings for your OS if its version is supported by existing OS bindings at other versions
+
+#### Generate new wrappers
+
+...
+
 
 ## Documentation
+
+PanamaGL aims at providing multiplatorm bindings to OpenGL using the Foreign Function & Memory API for JDK22 and later.
 
 ### Setup your computer
 * [Setup base for everyone](doc/setup/setup_everyone.md)
@@ -348,67 +439,6 @@ We here show how to use PanamaGL to run OpenGL based rendering application both 
 ### Design of Panama GL
 * [PanamaGL Design](doc/PanamaGL-Design.md)
 
-
-## Demos
-
-You can find demos in these projects
-* [panama-gl-samples](panama-gl-samples) PanamaGL Swing & AWT Samples
-* [panama-gl-jzy3d](panama-gl-jzy3d) Benchmarks
-  * Jzy3D Native samples (direct draw to an OS window)
-  * Jzy3D Embedded samples (indirect draw to a Java window)
-* [panama-gl-wrappers-macos](panama-gl-wrappers-macos) Unit tests in src/test/java
-
-
-### 3D offscreen GL demo
-
-* `TestFBO_macOS` and `DemoFBO_Offscreen_macOS`
-
-More details in [demo index](doc/PanamaGL-Demos.md)
-
-### 3D onscreen GL demos
-
-These two demo open a *native* window with Jzy3D (hence not a Java window yet). One can use the mouse to rotate the object, and double click to start an automatic rotation.
-
-| `SurfaceDemoPanamaGL`| `TeapotDemoPanamaGL`|
-|-|-|
-| <img src="doc/panama-gl-surface.png"/> | <img src="./doc/panama-gl-teapot.png"/> |
-
-More details in [demo index](doc/PanamaGL-Demos.md)
-
-
-## Panama GL Design
-
-The design of the library is defined [here](doc/PanamaGL-Design.md) but roughly described in the schema below.
-
-<img src="doc/PanamaGL-Design.png"/>
-
-
-## OpenGL Wrappers, Bindings, Natives
-
-Let's clarify 3 words
-* _Natives_ : native OpenGL libraries (`opengl.dll`, `libGL.dylib`, `libGL.so` with related `GL.h`). Up to now assumed to be available on developer computer.
-* _Bindings_ : raw Java classes generated by `JExtract` to invoke _Native_ libraries. Precompiled, available on Maven, Stored [here](https://gitlab.com/jzy3d/panama-gl-bindings).
-* _Wrappers_ : thin Java abstraction to fit a common GL interface defined by `panama-gl-core/GL`, wrapping _Bindings_.
-
-This project only provides _Wrappers_ and depends on _Bindings_. This avoid the main projects to recompile large _Bindings_ file source folder and makes IDEs faster.
-
-### Existing Wrappers & Bindings
-
-| Binding | Platform | GPU | Branch |
-| ------- | -------- | --- | ------ |
-| Linux | Ubuntu 20 | Intel | in progress / Blocked by FBO on Ubuntu |
-| Apple | macOS 10.15.7 | Intel | OK |
-| Apple | macOS 11.4.0 M1 | M1 | in progress / Blocked by no Panama JDK on ARM yet (Oracle) |
-| Microsoft | Windows 10 | Intel | in progress / Blocked by JDK19 |
-
-### Building OpenGL bindings for your platform
-
-To generate new bindings for your platform, see [the setup documentation of the bindings project](https://gitlab.com/jzy3d/panama-gl-bindings/-/tree/main/doc/setup)
-
-* You _should_ only have to do this if you use a computer OS and version for which binding exist already.
-* You _may not_ have to regenerate bindings for your OS if its version is supported by existing OS bindings at other versions
-
-
 # License
 
 All PanamaGL modules as well as JExtractGL are licensed under the [GPLv3 license](https://choosealicense.com/licenses/gpl-3.0/)
@@ -416,5 +446,3 @@ All PanamaGL modules as well as JExtractGL are licensed under the [GPLv3 license
 # Authors
 
 * Martin Pernollet
-
-* Maybe Manu
